@@ -1,3 +1,5 @@
+* Fix regression where period wasn't accepted in style attribute. [Jason Garber]
+
 === 4.2.0 / June 10, 2009
 
 * Fixed image with title, href, and text afterward not being made a link. [Jason Garber]
